--- a/OS/운영체제.md
+++ b/OS/운영체제.md
@@ -7,7 +7,7 @@
 
 ## [컴퓨터 시스템의 구조](OperatingSystem/02_컴퓨터_시스템의_구조.md)
 
-- 프로세스 관리
+## [프로세스 관리](OperatingSystem/03_프로세스_관리.md)
 - cpu 스케줄링
 - 병행 제어
 - 데드락
