스레드와 프로세스 생성

--- a/OS/OperatingSystem/03_프로세스_관리.md
+++ b/OS/OperatingSystem/03_프로세스_관리.md
@@ -75,3 +75,65 @@
     - 여유 공간 마련을 위해 프로세스를 통째로 메모리에서 디스크로 쫓아냄
     - 프로세스에게서 memory를 뻇는 문제
     - degree of Multiprogramming을 제어
+
+    ## 스레드(Thread)
+
+- 프로세스 내부에 cpu수행단위가 여러개 있는걸 뜻함
+- 보통 프로세스가 하나 주어지면 code, data, stack으로 이루어진 주소공간을 가진다 그리고 운영체제 내부에 프로세스 관리를 위한 PCB라는걸 두고있다
+    - 주소공간 : Thread 마다의 Stack(함수를 호출하고 리턴하는 정보를 쌓는곳), data, code
+    - PCB: pointer, process state, process number, program countet, registers, memory limits, list of open files ....등등
+    - 어떤 동일한 일을 하는 프로세스가 여러개 있다하면 별도의 주소공간이 만들어진다면 메모리가 낭비가 된다 그러면 주소공간을 하나만 띄어 놓고 프로세스 마다 다른 code 를 수행하면 된다. 즉 프로그램 카운터를 여러개를 주는것이다, 프로세스 하나에 cpu수행단위가 여러개가 있는걸 뜻한다
+- Thread 의 구성(각 스레드가 별도로 가지고있는것)
+    - program counter
+    - register set
+    - stack space
+- Thread가 동료 thread와 공유하는 부분(=task)
+    - code section
+    - data section
+    - OS resources
+- 전통적인 개념의 heavyweight process는 하나의 thread를 가지고 있는 rask로 볼 수 있다
+- 그렇다면 스레드를 사용하는게 어떤 장점이 있느냐
+    - 다중 스레드로 구성된 태스크 구조에서는 하나의 서버 스레드가 blocked(waiting) 상태인 동안에도 동일한 태스크 내의 다른 스레드가 실행(running)되어 빠른 처리를 할 수 있다. //응답성(Responsiveness) 굿
+        - 예를 들자면 웹브라우저 에다가 naver 같은걸 본다면 network를 통해서 웹페이지를 읽어오는데 이는 I/O 작업이라 오랜 시간이 걸린다. 그동안에 웹브라우저가 blocked 되어 화면에게 아무것도 보여주지 못한다면 사용자 입장에선 답답할 것이다. 그래서 하나의 스레드가 다른작업을 하는동안(blocked)에 또다른 스레드가 화면을 보여준다던지 사용자경험을 향상시켜줄수 있다.
+    - 동일한 일을 수행하는 다중 스레드가 협력하여 높은 처리율 (throughput)과 성능 향상을 얻을 수 있다
+        - 하나의 프로세스 안에 스레드만 여러개 두면 성능향상이나 자원을 절약할수있는 효과가 있다, (code, data, resource)를 공유,
+        - 프로세스 하나를 만드는것은 overhead가 크다 하지만 프로세스 안에 Thread를 만드는것은 숟가락만 얹는거기 떄문에 그렇게 overhead가 크지않다, 그다음에 context switch 가 일어날떄도 overhead가 크다 하지만 프로세스 내에서 cpu switching 은 overhead가 작기 다 각각 30배(새프로세스) 5배(컨텍스트 스위치) 정도나 차이가난다
+    - 스레드를 사용하면 병렬성을 높일 수 있다.
+        - cpu가 여러개 달린 컴퓨터에서만 얻을수있는 결과이다.
+- kernel Threads : 스레드가 여러개가 잇다는걸 운영체제에서 알기떄문에 하나의 스레드에서 다른 스레드로 cpu가 넘어갈때 커널이cpu 스케줄링하듯 넘겨줌
+- User Threads : 커널이 모르고, 프로세스 본인이 내부에서 구현하는것,구현상의 제약점이 있을수도 있다.
+
+## 프로세스 생성(Process Creation)
+
+- 부모 프로세스(Parent process)가 자식 프로세스(children process)생성
+- 프로세스의 트리(계층 구조) 형성
+- 프로세스는 자원을 필요로 함
+    - 운영체제로부터 받는다
+    - 부모와 공유하는경우도 있고 하지않는부분도 있다
+- 자원의 공유
+    - 부모와 자식이 모든 자원을 공유하는 모델
+    - 일부를 공유하는 모델
+    - 원칙적으로는 자원을 공유하진 않는다(전혀 공유하지 않는모델)
+- 수행(Execution)
+    - 부모와 자식은 공존하며 수행되는 모델
+    - 자식이 종료(terminate)될 때까지 부모가 기다리는(wait) 모델
+- 주소공간(Address space)
+    - 자식은 부모의 공간을 복사함(binary and OS data)
+    - 자식은 그 공간에 새로운 프로그램을 올림
+- 유닉스의 예
+    - fork() 시스템 콜이 새로운 프로세스를 생성
+        - 부모를 그대로 복사(OS data except PID + binary)
+        - 주소 공간 할당
+    - fork 다음에 이어지는 exec() 시스템 콜을 통해 새로운 프로그램을 메모리에 올림
+
+## 프로세스 종료(Process Termination)
+
+- 프로세스가 마지막 명령을 수행한 후 운영체제에게 이를 알려줌(exit)
+    - 자식이 부모에게 output data를 보냄(via wait)
+    - 프로세스의 각종 자원들이 운영체제에게 반납됨
+- 부모 프로세스가 자식의 수행을 종료시킴(abort)
+    - 자식이 할당 자원의 한계치를 넘어섬
+    - 자식에게 할당된 태스크가 더이상 필요하지 않음
+    - 부모가 종료(exit)하는 경우
+        - 운영체제는 부모 프로세스가 종료하는 경우 자식이 더 이상 수행되도록 두지 않는다
+        - 단계적인 종료
