--- a/OS/OperatingSystem/03_프로세스_관리.md
+++ b/OS/OperatingSystem/03_프로세스_관리.md
@@ -76,7 +76,7 @@
     - 프로세스에게서 memory를 뻇는 문제
     - degree of Multiprogramming을 제어
 
-    ## 스레드(Thread)
+## 스레드(Thread)
 
 - 프로세스 내부에 cpu수행단위가 여러개 있는걸 뜻함
 - 보통 프로세스가 하나 주어지면 code, data, stack으로 이루어진 주소공간을 가진다 그리고 운영체제 내부에 프로세스 관리를 위한 PCB라는걸 두고있다
@@ -105,15 +105,18 @@
 
 ## 프로세스 생성(Process Creation)
 
+Copy-on-write(COW) 기법 //write가 발생했을때 copy하겠다 라는 의미
+
 - 부모 프로세스(Parent process)가 자식 프로세스(children process)생성
+    - 코드 데이터 스택을 카피 해서 자식프로세스 생성
 - 프로세스의 트리(계층 구조) 형성
 - 프로세스는 자원을 필요로 함
     - 운영체제로부터 받는다
     - 부모와 공유하는경우도 있고 하지않는부분도 있다
 - 자원의 공유
     - 부모와 자식이 모든 자원을 공유하는 모델
-    - 일부를 공유하는 모델
-    - 원칙적으로는 자원을 공유하진 않는다(전혀 공유하지 않는모델)
+    - 일부를 공유하는 모델// 리눅스와 같이 효율적인 모델은 주소값만 카피해서 자원을 공유
+    - 원칙적으로는 자원을 공유하진 않는다(전혀 공유하지 않는모델)//CPU 점유를 경쟁하는 관계
 - 수행(Execution)
     - 부모와 자식은 공존하며 수행되는 모델
     - 자식이 종료(terminate)될 때까지 부모가 기다리는(wait) 모델
@@ -121,7 +124,7 @@
     - 자식은 부모의 공간을 복사함(binary and OS data)
     - 자식은 그 공간에 새로운 프로그램을 올림
 - 유닉스의 예
-    - fork() 시스템 콜이 새로운 프로세스를 생성
+    - fork() 시스템 콜이 새로운 프로세스를 생성(프로세스 가 운영체제에게 요청)
         - 부모를 그대로 복사(OS data except PID + binary)
         - 주소 공간 할당
     - fork 다음에 이어지는 exec() 시스템 콜을 통해 새로운 프로그램을 메모리에 올림
@@ -137,3 +140,86 @@
     - 부모가 종료(exit)하는 경우
         - 운영체제는 부모 프로세스가 종료하는 경우 자식이 더 이상 수행되도록 두지 않는다
         - 단계적인 종료
+
+## fork() 시스템 콜
+
+- fork() 를 사용해서 사용자 프로그램이 프로세스를 만드는 코드(C)
+
+```c
+int main()
+{ int pid;
+	pid = fork();
+if(pid ==0) /* this is child */
+	printf("\n Hello, I am child! \n");
+else if (pid >0) /* this is parent */
+	printf("\n Hello, I am parent!\n ");
+}
+```
+
+- 프로그램 카운터를 그대로 복사를 하기떄문에 fork()가 이루어진 시점으로 복제가된다
+- 부모 프로세스는 fork를 한 리턴값으로 pid인 양수를 얻고 자식 프로세스는 0을 얻는다 // 이러한 원리로 어떤게 원본이고 복제본인지 구분지을수 있게된다
+
+## exec() 시스템 콜
+
+```c
+int main()
+{  int pid;
+	 pid = fork();
+	 if(pid == 0)              /* this is child */
+	{   printf("\n Hello, I am child! Now I'll rud date \n");
+		  execlp("/bin/date", "/bin/date", (char *) 0);
+	}
+	else if(pid > 0)           /* this is parent */
+	    printf("\n Hello, I am parent!\n");
+}
+```
+
+- exec 를 만나는 순간 새로운 프로그램으로 덮여 씌워진다
+- 다시 되돌아갈수 없다
+
+## wait() 시스템 콜
+
+- 프로세스를 blocked 상태로 보내는것 (자식 프로세스가 종료될떄까지)
+- 프로세스 A가 wait() 시스템 콜을 호출하면
+    - 커널은 child가 종료될 때까지 프로세스 A를 sleep 시킨다 (block 상태)
+    - Child process가 종료되면 커널은 프로세스 A를 꺠운다 (ready 상태)
+
+## exit() 시스템 콜
+
+- 프로세스의 종료
+    - 자발적 종료
+        - 마지막 statement 수행 후 exit() 시스템 콜을 통해
+        - 프로그램에 명시적으로 적어주지 않아도 main 함수가 리턴되는 위치에 컴파일러가 넣어줌
+    - 비자발적 종료 // 외부에 의해 강제종료되는 경우도있음
+        - 부모 프로세스가 자식 프로세스를 강제 종료시킴
+            - 자식 프로세스가 한계치를 넘어서는 자원 요청
+            - 자식에게 할당된 태스크가 더 이상 필요하지 않음
+        - 키보드로 kill,break 등을 친 경우
+        - 부모가 종료하는 경우
+            - 부모 프로세스가 종료되기전에 자식들이 먼저 종료됨
+
+## 프로세스 간 협력
+
+- 독립적 프로세스(Independent process)
+    - 프로세스는 각자의 주소 공간을 가지고 수행되므로 원칙적으로 하나의 프로세스는 다른 프로세스의 수행에 영향을 미치지 못함
+- 협력 프로세스(Cooperating process)
+    - 프로세스 협력 메커니즘을 통해 하나의 프로세스가 다른 프로세스의 수행에 영향을 미칠 수 있음
+- 프로세스 간 협력 메커니즘(IPC : Interprocess Communication)
+    - 메시지를 전달하는 방법
+        - message passing : 커널을 통해 메시지 전달
+    - 주소 공간을 공유하는 방법
+        - shared memory : 서로 다른 프로세스 간에도 일부 주소 공간을 공유하게 하는 shared memory 메커니즘이 있음
+            - 커널에 시스템콜을 해야하고 , 매핑을 해야함
+    - thread : thread 는 사실상 하나의 프로세스 이므로 프로세스 간 협력으로 보기는 어렵지만 동일한 process를 구성하는 thread들 간에는 주소 공간을 공유하므로 협력이 가능 // 이건 스레드간의 협력입니다 참고하세요
+
+## Message Passing
+
+- Message system
+    - 프로세스는 각자의 데이터만으로 구동되기떄문에 커널을 통해서 메시지를 주고받음
+    - 프로세스 사이에 공유 변수(shared variable)를 일체 사용하지 않고 통신하는 시스템
+- Direct Communication // 항상 커널을 통함
+    - 통신하려는 프로세스의 이름을 명시적으로 표시
+    - Process P/Send(Q,message)  → Process Q/Receive(P,message)
+- Indirect Communication // 마찬가지로 커널을 통함
+    - mailbox(또는 port)를 통해 메시지를 간접 전달
+    - Process P/Send(Q,message) → Mailbox → Process Q/Receive(P,message)
