fix:readme수정 && os/운영체제수정

--- a/OS/운영체제.md
+++ b/OS/운영체제.md
@@ -1,6 +1,6 @@
 # 운영체제 (Operating Systems, OS)
 
-운영체제는 컴퓨터 하드웨어 바로 위에 설치되는 소프트웨어 계층으로서 모든 컴퓨터 시스템의 필수적인 부분이다
+운영체제는 컴퓨터 하드웨어 바로 위에 설치되는 소프트웨어 계층으로서 모든 컴퓨터 시스템의 필수적인 부분
 
 
 ## [운영체제의 개요](OperatingSystem/01_운영체제의_개요.md)
